# NetHack

./: .gitignore  CMakeLists.txt
include/: extern.h
src/: CMakeLists.txt  cmd.c  dungeon.c  end.c  files.c  mail.c  options.c  pline.c  restore.c  save.c  windows.c
sys/amiga/: winami.c
sys/wince/: mhmain.c  mswproc.c
sys/winnt/: windmain.c
util/: CMakeLists.txt
win/Qt/: qt_win.cpp
win/X11/: winmisc.c
win/gem/: wingem.c
win/pyshim/: .gitignore  CMakeLists.txt  NethackVR.txt  hack8.sfd  nhvr.py
win/pyshim/cmake/: dgncomp.cmake  nethackdll.cmake
win/tty/: wintty.c
win/win32/: mswproc.c
win/win32/vs2017/: NetHack.sln  NethackVrDll.vcxproj  NethackVrDll.vcxproj.filters
